// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`headers should add headers 1`] = `
[
  "/",
  {
    "headers": {
      "x-version": "1.0",
    },
  },
]
`;

exports[`headers should add headers 2`] = `
[
  "/",
  {
    "headers": {
      "x-version": "1.1",
    },
  },
]
`;
